<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/image_processing_upper_bar"
        android:elevation="10dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/text_original"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/selector_ic_original"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/image_processing_original"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_magic_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/selector_ic_magic_color"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/image_processing_magic_color"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_gray_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_ic_gray"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/image_processing_gray_mode"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_black_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/selector_ic_black_white"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/image_processing_b_w"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/horizontal_scroll_bottom"
        android:layout_below="@+id/horizontal_scroll"
        android:layout_gravity="center"
        android:background="@android:color/black">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/black">

            <FrameLayout
                android:id="@+id/frame_source"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/scanPadding">

                <ImageView
                    android:id="@+id/image_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_processing_edit_Image" />
            </FrameLayout>

            <widget.PolygonView
                android:id="@+id/polygon_outline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/image_processing_transparent_background"
            android:gravity="bottom"
            android:padding="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <SeekBar
                android:id="@+id/seek_contrast_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false" />
        </LinearLayout>
    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/image_processing_lower_bar"
        android:elevation="10dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="6">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_processing_contrast"
                android:src="@drawable/selector_ic_back" />

            <ImageView
                android:id="@+id/image_mirror"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_processing_mirror"
                android:src="@drawable/selector_ic_mirror"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/image_rotate_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_processing_rotate_anticlockwise"
                android:src="@drawable/selector_ic_rotate_anticlockwise"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/image_rotate_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_processing_rotate_clockwise"
                android:src="@drawable/selector_ic_rotate_clockwise"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/image_ocr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_processing_ocr"
                android:src="@drawable/ic_ocr"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/image_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_processing_save"
                android:src="@drawable/selector_ic_save" />
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>